# Cache

./: CMakeLists.txt  README.md  main  makefile
include/: CacheClass.hpp  CacheLRUClass.hpp  CacheOPT.hpp  CacheOPTClass.hpp  HashlineClass.hpp  tests.hpp
src/: CacheClass.cpp  HashlineClass.cpp  main.cpp
src/LRU/: CacheLRUClass.cpp  main_LRU.cpp
src/OPT/: CacheOPTClass.cpp  main_OPT.cpp
src/tests/: tests.cpp  tests.txt  tests_LRU.cpp  tests_LRU.txt  tests_OPT.cpp  tests_OPT.txt
